tests/sylt_std/as_int_faulty.sy
from std use as_int

start :: fn do
    as_int("a")
end
// error: $A 'float' cannot be a 'str'
